fix: исправить конфигурацию для Railway деплоя